gedcomfy/tests/snapshots/tests__kdl_error@ansel_specified_malformed_badchar.ged.snap
---
source: gedcomfy/tests/tests.rs
description: "0 HEAD\r\n1 GEDC\r\n2 VERS 5.5.1\r\n1 CHAR ANSEL\r\n0 MACRON¯\r\n0 TRLR\r\n"
expression: "shared::render(&err)"
input_file: gedcomfy/tests/encoding_inputs/ansel_specified_malformed_badchar.ged
---
gedcomfy::error

  × A problem was found in the GEDCOM file
  ╰─▶ gedcom::parse_error::invalid_tag
      
        × Invalid character in tag
         ╭─[5:9]
       4 │ 1 CHAR ANSEL
       5 │ 0 MACRON¯
         ·         ┬
         ·         ╰── this character is not permitted in a tag
       6 │ 0 TRLR
         ╰────
        help: tag names must begin with either an uppercase letter or
              underscore, followed by letters or numbers
